[gd_scene load_steps=3 format=3 uid="uid://bpcnwbg21pyyj"]

[ext_resource type="FontFile" uid="uid://c6o3y6bwturee" path="res://assets/fonts/EDU_AU Font/EduAUVICWANTPre-VariableFont_wght.ttf" id="1_f5hh6"]
[ext_resource type="Script" path="res://pause_menu.gd" id="1_ovo5s"]

[node name="pause_menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -773.0
offset_bottom = -428.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovo5s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -1.0
offset_right = 1919.0
offset_bottom = 1079.0
color = Color(0, 0, 0, 0.341176)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -59.0
offset_right = 1095.5
offset_bottom = 588.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f5hh6")
text = "Back to Game"

[node name="NotesScreen" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f5hh6")
text = "Look At Notes
"

[node name="QuitGame" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f5hh6")
text = "Quit"

[connection signal="pressed" from="GridContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="GridContainer/NotesScreen" to="." method="_on_notes_screen_pressed"]
[connection signal="pressed" from="GridContainer/QuitGame" to="." method="_on_quit_game_pressed"]
